<resources>
    <string name="condiciones_servicios_informacion">Queda prohibido alterar o modificar ninguna parte de la APP a de los contenidas de la misma, eludir, desactivar o manipular de cualquier otra forma (o tratar de eludir, desactivar o manipular) las funciones de seguridad u otras funciones del programa y utilizar la APP o sus contenidos para un fin comercial o publicitario.</string>
    <string name="politicas_usuario">Se recopilará datos de un modo que, por si mismos, no pueden ser asociados directamente a una persona determinada. Estos datos de carácter no personal se pueden recopilar, tratar, transferir y publicar con cualquier intención.</string>
    <string name="recuperar_cuenta_informacion">RECUPERACIÓN DE LA CUENTA \n\n Si ha olvidado su contraseña ingrese su NOMBRE DE USUARIO con el cual se registro, se le enviará un código de confirmación al correo asociado al usuario para restablecer la contraseña.</string>
    <string name="informacion_configuracion">La configuración del usuario le permite configurar las preferencias de idioma y de correo electrónico, mientras que los datos de la cuenta le permiten controlar su configuración del uso compartido de datos.</string>
    <string name="enviar_comentarios">ENViANOS TUS COMENTARIOS \n Queremos saber tu opinión sobre la APP. Comentanos sobre algún error en la APP o como podemos mejorar nuestro servicio</string>
    <string name="lateral_ayuda">ENViANOS TUS COMENTARIOS \n Queremos saber tu opinión sobre la APP. Comentanos sobre algún error en la APP o como podemos mejorar nuestro servicio</string>
    <string name="error_singup">Error al crear el usuario. El nombre de usuario no debe tener espacios en blanco</string>
    <string name="ningun_dispositivo_bluetooth">No se ha seleccionado ningún dispositivo Bluetooth</string>
    <string name="codigo_enviado">Se ha enviado el Código de Verificación a su Correo Electrónico</string>
    <string name="longitud_password_incorrecta">La contraseña debe ser mayor a 5 caracteres</string>
    <string name="correo_invalido">El Correo Ingresado No Cumple con los Parámetros</string>
    <string name="seleccion_engine_coolant_temperature">Temperatura Motor</string>
    <string name="lectura_engine_Coolant_temperature">Temperatura Motor</string>
    <string name="conectar_obd">Conectar el dispositivo al iniciar la aplicación</string>
    <string name="seleccion_permanent_trouble_codes">Permanent Trouble Codes</string>
    <string name="informacion_administrador">Información del Administrador</string>
    <string name="codigo_confirmacion">Ingrese el Código de Confirmación</string>
    <string name="nuevo_confirmar_password_usuario">Confirmar Contraseña</string>
    <string name="falta_codigo">Debe Ingresar el Código de Confirmación</string>
    <string name="obstruccion_visibilidad">Obstrucción a la Visibilidad</string>
    <string name="usuario_incorrecto">Usuario o Contraseña Incorrectos</string>
    <string name="confirmar_nuevo_password">Confirmar Nueva Contraseña</string>
    <string name="configuraciones_usuario">Configuraciones de Usuario</string>
    <string name="usuario_actualizado">Usuario Actualizado con Éxito</string>
    <string name="usuario_recuperacion">Ingrese el Nombre de Usuario</string>
    <string name="inicio_sesion_fallida">"Inicio de Sesión Fallido"</string>
    <string name="recobrar_password">"¿Has olvidado la contraseña?"</string>
    <string name="informacion_proximamente">Próximamente Habilitado</string>
    <string name="configuracion_guardar">Configuraciones Guardadas</string>
    <string name="reenviar_codigo">Reenviar Código de Confirmación</string>
    <string name="error_crear_usuario">No se Pudo Crear el Usuario</string>
    <string name="password_no_conicide">La Contraseña No Coincide</string>
    <string name="falta_informacion">Debe Llenar Todos los Campos</string>
    <string name="retorno_principal">Retornando al Menú Principal</string>
    <string name="guardar_configuraciones">Guardar Configuración</string>
    <string name="configuracion_usuario">Configuración de la APP</string>
    <string name="seleccion_throttle_position">Throttle Position</string>
    <string name="politicas_privacidad">Politicas de Privacidad</string>
    <string name="lectura_throttle_position">Posición Acelerador</string>
    <string name="temperatura_baja">Real Feel Temperature Shade</string>
    <string name="condiciones_usuario">Condiciones de Servicio</string>
    <string name="configuracion_alertas">Configuración Alertas</string>
    <string name="nuevo_password_usuario">Ingresar Contraseña</string>
    <string name="informacion_trafico">Información de Tráfico</string>
    <string name="informacion_usuario">Información de Usuario</string>
    <string name="codigo_verificacion">Código de Verificación</string>
    <string name="velocidad_del_viento">Velocidad Viento</string>
    <string name="ir_a_configuraciones">Ir a Configuraciones</string>
    <string name="ingrese_usuario">Debe Ingresar un Usuario</string>
    <string name="presion_atmosferica">Presión Atmosférica</string>
    <string name="condiciones_precipitacion">Precipitación</string>
    <string name="nuevo_password">Ingrese Nueva Contraseña</string>
    <string name="recuperar_password">Recuperar Contraseña</string>
    <string name="nuevo_correo_usuario">Correo Electrónico</string>
    <string name="nuevo_apellido_usuario">Apellido Usuario</string>
    <string name="crear_nueva_cuenta">"Crear Cuenta Nueva"</string>
    <string name="condiciones_medicas">Condiciones Medicas</string>
    <string name="temperatura_media">Real Feel Temperature</string>
    <string name="posicion_acelerador">Posición Acelerador</string>
    <string name="distancia_recorrida">Distancia Recorrida</string>
    <string name="medida_datos_muy_alta">Riesgo: MUY ALTO </string>
    <string name="informacion_clima">Información de Clima</string>
    <string name="on_site_accidents">Accidentes Sitio</string>
    <string name="ayuda_comentarios">Ayuda y Comentarios</string>
    <string name="angulo_inclinacion">Ángulo Inclinación</string>
    <string name="elegir_dispositivo">Elegir Dispositivo</string>
    <string name="riesgo_calculando">Riesgo:</string>
    <string name="dato_riesgo_calculado"> </string>
    <string name="usuario_apellido">Apellido de Cliente</string>
    <string name="tab_flujo">Condiciones Metereológicas</string>
    <string name="riesgo_accidente">Riesgo de Accidente</string>
    <string name="alertas_muy_altas">Alertas Muy Altas</string>
    <string name="modificar_usuario">Modificar Usuario</string>
    <string name="desea_cerrar_sesion">¿Cerrar Sesión?</string>
    <string name="verificar_usuario">Verificar Usuario</string>
    <string name="enviar_comentario">Enviar Comentario</string>
    <string name="flujo_vehiculos">Número de Vehiculos</string>
    <string name="nuevo_nombre_usuario">Nombre Usuario</string>
    <string name="temperatura_motor">Temperatura Motor</string>
    <string name="condiciones_temperatura">Temperatura</string>
    <string name="condiciones_viento">Velocidad Viento</string>
    <string name="titulo_comentario">Titulo Comentario</string>
    <string name="condiciones">Condiciones de Servicio</string>
    <string name="informacion">Información del Usuario</string>
    <string name="lectura_velocidad">Velocidad</string>
    <string name="usuario_username">Nombre de Usuario</string>
    <string name="flujo_velocidad">Velocidad Promedio</string>
    <string name="flujo_ocupacion">Ocupación Promedio</string>
    <string name="ingresar_mensaje">Ingresar mensaje</string>
    <string name="correo_usuario">Correo Electrónico</string>
    <string name="telefono_usuario">Teléfono Usuario</string>
    <string name="politicas">Politicas de Privacidad</string>
    <string name="usuario_invalido">Usuario Inválido</string>
    <string name="verificar_codigo">Verificar Código</string>
    <string name="cambiar_satelital">Vista Satelital</string>
    <string name="eliminar_usuario">Eliminar Usuario</string>
    <string name="nombre_apellido">Nombre y Apellido</string>
    <string name="seleccion_engine_load">Carga Motor</string>
    <string name="humedad_relativa">Humedad Relativa</string>
    <string name="last_update"></string>
    <string name="on_site_hour">Accidentes Hora</string>
    <string name="usuario_nombre">Nombre de Cliente</string>
    <string name="restablecer_password">Restablecer</string>
    <string name="tab_condiciones">Flujo de Tráfico</string>
    <string name="perfil_usuario">Perfil de Usuario</string>
    <string name="escoger_opcion">Escoja una Opción</string>
    <string name="lectura_engine_load">Carga Motor</string>
    <string name="medida_datos_media">Riesgo: MEDIO </string>
    <string name="correo_app">epnpis2220@gmail.com</string>
    <string name="informacion_obd">Información OBD</string>
    <string name="usuario_guardar">Guardar Cambios</string>
    <string name="puntos_licencia">Puntos Licencia</string>
    <string name="estado_licencia">Estado Licencia</string>
    <string name="ingresar_codigo">Ingresar Código</string>
    <string name="flujo_direccion">Dirección Flujo</string>
    <string name="ver_ayudas">Obtener Ayuda Online</string>
    <string name="mensaje_enviado">Mensaje Enviado</string>
    <string name="iniciar_lectura">Iniciar Lectura</string>
    <string name="detener_lectura">Detener Lectura</string>
    <string name="seleccion_engine_rpm">Revoluciones Minuto</string>
    <string name="voltaje_sistema">Voltaje Sistema</string>
    <string name="lectura_engine_rpm">Revoluciones Minuto</string>
    <string name="indice_visibilidad">Visibilidad</string>
    <string name="punto_control">Punto de Control</string>
    <string name="medida_datos_baja">Riesgo: BAJO </string>
    <string name="medida_datos_alta">Riesgo: ALTO </string>
    <string name="temperatura_clima">Temperatura</string>
    <string name="nivel_baterias">Nivel Baterias</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="alertas_medias">Alertas Medias</string>
    <string name="conectar_dispositivo">Conectar</string>
    <string name="seleccion_velocidad">Velocidad</string>
    <string name="parametros_obd">Parámetros OBD</string>
    <string name="estado_clima">Estado del Clima</string>
    <string name="ritmo_cardiaco">Ritmo Cardiaco</string>
    <string name="tab_datos">Datos del Vehiculo</string>
    <string name="velocidad_vehiculo">Velocidad</string>
    <string name="temperatura_alta">Temperatura</string>
    <string name="nombre_principal">POLIDriving</string>
    <string name="nuevo_usuario">Nuevo Usuario</string>
    <string name="condiciones_humedad">Humedad</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="alertas_bajas">Alertas Bajas</string>
    <string name="alertas_altas">Alertas Altas</string>
    <string name="crear_cuenta">"Crear Cuenta"</string>
    <string name="estado_lluvia">Precipitación</string>
    <string name="confirmar_correo">CONFIRMAR</string>
    <string name="no_ingresado">No Ingresado</string>
    <string name="menu_lateral">Menu Lateral</string>
    <string name="flujo_ubicacion">Ubicación</string>
    <string name="no_permitido">No Permitido</string>
    <string name="cambiar_capas">Vista Capas</string>
    <string name="clima_actual">Clima Actual</string>
    <string name="fecha_actual">Fecha Actual</string>
    <string name="enlace_movil">Enlace Móvil</string>
    <string name="tab_accidentes">Accid. y Via</string>
    <string name="valor_ejemplo"></string>
    <string name="alertas">Notificaciones</string>
    <string name="privacidad">Privacidad</string>
    <string name="valor_ejemplo_2"></string>
    <string name="indice_uv">indice UV</string>
    <string name="guardar">Guardar</string>
    <string name="escaner">Escaner</string>
    <string name="vehiculos">Vehículos</string>
    <string name="cuenta">Cuenta</string>
    <string name="ayuda">Ayuda</string>
</resources>