<?xml version="1.0" encoding="utf-8" ?>
<!-- Creación de los elementos visuales y sus parametros correspondientes -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.polidriving.mobile.clases.principal.PrincipalActivity">

    <item
        android:id="@+id/accion_setting"
        android:enabled="true"
        android:icon="@drawable/settings"
        android:orderInCategory="00"
        android:title=""
        android:visible="true"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/accion_usuario"
                android:enabled="true"
                android:icon="@drawable/usuario_settings"
                android:orderInCategory="10"
                android:title="@string/cuenta"
                android:visible="true"
                app:showAsAction="never" />

            <item
                android:id="@+id/accion_escaner"
                android:enabled="true"
                android:icon="@drawable/escaner"
                android:orderInCategory="20"
                android:title="@string/escaner"
                android:visible="true"
                app:showAsAction="never" />

            <item
                android:id="@+id/accion_alertas"
                android:enabled="true"
                android:icon="@drawable/notificacion"
                android:orderInCategory="30"
                android:title="@string/alertas"
                android:visible="true"
                app:showAsAction="never" />

            <item
                android:id="@+id/accion_privacidad"
                android:enabled="true"
                android:icon="@drawable/privacy"
                android:orderInCategory="40"
                android:title="@string/privacidad"
                android:visible="true"
                app:showAsAction="never" />

            <item
                android:id="@+id/accion_vehiculos"
                android:enabled="true"
                android:icon="@drawable/auto"
                android:orderInCategory="50"
                android:title="@string/vehiculos"
                android:visible="true"
                app:showAsAction="never" />

            <item
                android:id="@+id/accion_correo"
                android:enabled="true"
                android:icon="@drawable/help"
                android:orderInCategory="60"
                android:title="@string/ayuda"
                android:visible="true"
                app:showAsAction="never" />

            <item
                android:id="@+id/accion_trafico"
                android:enabled="false"
                android:icon="@android:drawable/ic_dialog_map"
                android:orderInCategory="70"
                android:title="@string/informacion_trafico"
                android:visible="false"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>